k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-server
  namespace: python-server
  labels:
    app: python-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-server
  template:
    metadata:
      labels:
        app: python-server
    spec:
      containers:
        - name: python-server
          image: quixq/python-server:latest-06b29a9f7290cdda85881b7e844760da298b7ec1
          ports:
            - containerPort: 8080
