k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-server
  namespace: python-server
spec:
  selector:
    app: python-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
