k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-server-ingress
  namespace: python-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: app.quixly.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-server
                port:
                  number: 80
